image cropping fix

--- a/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/main/component/shared/components/drag-and-drop/drag-and-drop.component.scss
@@ -52,9 +52,13 @@
   line-height: 16px;
 }
 
-img {
-  width: 426px;
-  height: 231px;
+.image-preview {
+  display: flex;
+  width: 100%;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .cropper-buttons {
